[gd_scene load_steps=3 format=3 uid="uid://c6aq8schbxi0g"]

[ext_resource type="Script" path="res://scenes/boki_node.gd" id="1_tk0np"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgelh"]
size = Vector2(200, 100)

[node name="BokiNode" type="Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tk0np")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AccountNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "普通預金"
horizontal_alignment = 1

[node name="BalanceLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(100, 50)
shape = SubResource("RectangleShape2D_tgelh")
